- Show assigned apps - Show feedback activity - Show Loan Details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="title_activity_presence">PresenceActivity</string>
     <string name="title_activity_list_assigned_apps">ListAssignedAppsActivity</string>
     <string name="title_activity_feedback">FeedbackActivity</string>
+    <string name="title_activity_list_pending_approvals">ListPendingApprovalsActivity</string>
+    <string name="title_activity_feedback_approval_form">FeedbackApprovalFormActivity</string>
+    <string name="title_activity_loan_details">LoanDetailsActivity</string>
 </resources>
